--- a/lesson_1_analysis.ipynb
+++ b/lesson_1_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "max        13.499000       500001.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -252,6 +252,33 @@
    "source": [
     "# Create Correlation Matrix and Make Scatter Plots\n",
     "scatter_matrix(df, figsize=(12, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "housing_median_age   -0.138196\n",
+       "population            0.151646\n",
+       "households            0.176037\n",
+       "total_rooms           0.305802\n",
+       "median_income         0.766627\n",
+       "median_house_value    1.000000\n",
+       "Name: median_house_value, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find correlation with respect to median house value\n",
+    "df.corr()['median_house_value'].sort_values()"
    ]
   }
  ],
